# resume-refinery

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
docs/: architecture.md  usage.md
docs/requirements/: README.md  convergence.md  functional.md  non-functional.md
docs/todo/: future_enchancements.md
examples/: career_profile.md  job_description.md  voice_profile.md
src/resume_refinery/: __init__.py  __main__.py  agent.py  career_repo.py  career_wizard.py  cli.py  elicitation.py  exporters.py  ingest_agent.py  models.py  orchestrator.py  parsers.py  prompts.py  reviewers.py  session.py  specialist_agents.py  utils.py  webapp.py
tests/: conftest.py  test_agent.py  test_career_repo.py  test_career_wizard.py  test_cli.py  test_elicitation.py  test_exporters.py  test_ingest_agent.py  test_models.py  test_orchestrator.py  test_parsers.py  test_reviewers.py  test_session.py  test_specialist_agents.py  test_utils.py  test_webapp.py
